2007-12-12  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: verify that the `abstract', `virtual',
	  and `overrides' method modifiers are used only where applicable

2007-12-12  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratormethod.vala: fix invalid C code for virtual
	  interface method implementations

	* tests/interfaces.exp, tests/interfaces.vala: test virtual interface
	  method implementations

2007-12-12  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/scanner.l, vala/valadatatype.vala,
	  vala/valasymbolresolver.vala, vala/valavoidtype.vala: always use
	  VoidType

	* tests/delegates.exp, tests/delegates.vala: test delegates with void
	  return types

2007-12-09  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-2.0/, vapi/packages/gtk+-2.0/, vapi/packages/pango/:
	  add missing files

2007-12-09  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-2.0/, vapi/packages/gtk+-2.0/,
	  vapi/packages/gtk+-2.0/, vapi/packages/pango/: remove bindings for
	  deprecated functions

	* vapi/atk.vapi, vapi/gdk-2.0.vapi, vapi/gtk+-2.0.vapi, vapi/pango.vapi:
	  regenerated

2007-12-09  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add GTimer and g_list_insert_sorted,
	  patch by Mikael Hermansson

2007-12-04  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratormethod.vala,
	  gobject/valadbusbindingprovider.vala: use subclasses of DataType

2007-12-04  Jürg Billeter  <j@bitron.ch>

	* vala/valacreationmethod.vala, vala/valasemanticanalyzer.vala,
	  gobject/valaccodegeneratormethod.vala: fix return type for creation
	  methods

2007-12-04  Jürg Billeter  <j@bitron.ch>

	* vala/valaarray.vala, vala/valaclass.vala, vala/valaenum.vala,
	  vala/valainterface.vala, vala/valareferencetype.vala,
	  vala/valasemanticanalyzer.vala, vala/valasignal.vala,
	  vala/valastruct.vala, gobject/valaccodegeneratormethod.vala,