@@ -1,5 +1,10 @@
 2007-12-12  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valasemanticanalyzer.vala: support assignment of lambda
+	  expressions to local variables
+
+2007-12-12  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valasemanticanalyzer.vala: verify that the `abstract', `virtual',
 	  and `overrides' method modifiers are used only where applicable
 
